herosection, featuressection, popular section, category grid added a font family poppins and responsiveness in navbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins";
+}
+
+@font-face {
+  font-family: "Poppins" ;
+  src: url("./assets/fonts/Poppins/Poppins-Regular.ttf") ;
 }
 
 .mainContainer {
@@ -10,7 +17,7 @@
 .topBar {
   display: flex;
   justify-content: space-between;
-  margin: 8px 0;
+  padding: 8px 0px;
 }
 
 .rightTopbar {
@@ -89,7 +96,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  position: relative;
 }
+
 
 .navbar a {
   color: white;
@@ -97,9 +106,215 @@
   text-decoration: none;
 }
 
+.hamburger{
+  display: none;
+}
+
 .icons img {
   margin-left: 20px;
   width: 23px;
+}
+
+.topSection {
+  z-index: 999;
+  background-color: #fff;
+}
+
+.heroSection{
+  display: grid;
+  grid-template-columns: 71% 29%;
+  height: 600px;
+  margin-top: 20px;
+}
+
+.hSLeft{
+  background: url(assets/images/BannarBig.png);
+  height: 100%;
+  background-position: right ;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-left: 40px;
+  border-radius: 10px;
+}
+
+.hSLeftContent{
+  padding-left: 20px;
+}
+
+.hSLeftContent h1{
+  color: white;
+  font-size: 50px;
+}
+
+.hSLeftContent h5{
+  color: white;
+  font-size: 20px;
+  letter-spacing: 0.4px;
+}
+
+.hSLeftContent h5 button{
+  background-color: #FF8A00;
+  margin: 20px 0 10px 0;
+  padding: 6px;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  letter-spacing: 0.4px;
+}
+
+.hSLeftContent p{
+  color: #FFFFFF;
+}
+
+.hSRight{
+  display: grid;
+  grid-template-rows: 50% 50%;
+  height: 100%;
+  padding-left: 10px;
+}
+
+.hSRTop{
+  background: url(assets/images/BG.png);
+  margin: 0 0 10px 10px;
+  border-radius: 10px;
+  padding: 30px 0 0 20px;
+}
+
+.hSRTop h4{
+  letter-spacing: 0.4px;
+  padding-bottom: 3px;
+}
+
+.hSRTop h2{
+  font-size: 34px;
+  padding-bottom: 8px;
+}
+
+.hSRTop p{
+  font-size: 18px;
+  padding-bottom: 20px;
+  color: #666666;
+}
+
+.hSRTop button{
+  border: none;
+  font-size: 18px;
+  color: #00b207;
+  display: flex;
+  align-items: center;
+}
+
+.hSRTop button b{
+  padding-right: 10px;
+}
+
+.hSRBottom{
+  background: url(assets/images/BG1.png);
+  margin: 10px 0 0 10px;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  /* padding-top: 50px; */
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.hSRBottom h5{
+  /* padding: 4px; */
+  letter-spacing: 1px;
+}
+
+.hSRBottom button{
+  border: none;
+  font-size: 18px;
+  color: #00b207;
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+}
+
+.hSRBottom button b{
+  padding-right: 10px;
+}
+
+.featuresSec{
+  margin: 20px 0;
+  box-shadow: 0 8px 40px 0 rgba(0, 38, 3, 0.08);
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  padding: 30px;
+}
+
+.featureBox{
+  display: flex;
+  align-items: center;
+}
+
+.featureIcon{
+  padding-right: 10px;
+}
+
+.featureIcon img{
+  width: 25px;
+  padding-top: 8px;
+}
+
+.featureText h4{
+  padding-bottom: 2px;
+  font-size: 13px;
+}
+
+.featureText p{
+  font-size: 11px;
+  color: #999999;
+}
+
+.popularCategories{
+  margin-top: 40px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.header h3{
+  font-size: 30px;
+}
+
+.btn{
+  display: flex;
+  color: #00b207;
+  align-items: center;
+}
+
+.btn h5{
+  padding-right: 10px;
+  font-size: 16px;
+}
+
+.categoryGrid{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.categoryItem{
+  margin-bottom: 10px;
+  box-shadow: 0 0 0.5px;
+  padding-top: 5px;
+  border-radius: 5px;
+  border: 1px rgba(229, 229, 229, 1);
+}
+
+.categoryItem h5{
+   padding: 5px 0 15px 0;
 }
 
 @media (max-width: 426px) {
@@ -127,6 +342,30 @@
     font-size: 8px;
     width: 80px;
   }
+
+  .navbar a {
+  color: white; 
+  text-decoration: none;
+
+}
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+  position: absolute;
+    top: -100px;
+    z-index: -9;
+    transition: 0.7s;
+}
+
+.hamburger{
+  display: block;
+}
+
+.show{
+  top: 45px;
+}
+
 }
 
 @media (max-width: 769px) {
@@ -169,5 +408,7 @@
 
   .navbar a {
     margin-right: 15px;
-  }
+
 }
+}
+
